gateway-controller-implementation/envoy-gateway/example/app-nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eg-nginx
spec:
  parentRefs:
  - name: eg-public
    sectionName: http
  #hostnames: []
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /nginx-eg
    backendRefs:
    - name: nginx-eg-svc
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-eg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-eg-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nginx
